# claude-analysis

./: .gitignore  README.md  analyze.py  app.py  pyproject.toml  shared.py
_memory_skills/: memory_tab.py  plugins_tab.py  repo_configs_tab.py  skills_tab.py
claude_analyzer/: __init__.py  diff.py  disk_cache.py  memory.py  parser.py  parser_antigravity.py  parser_freebuff.py  parser_mimo.py  parser_opencode.py  search.py  skills.py  stats.py  timeline.py  viz.py
pages/: 1_Timeline.py  2_Projects.py  3_Sessions.py  4_Compare.py  5_Memory_Skills.py  6_Antigravity.py
pages/_memory_skills/: data_sources_tab.py
